# lumispy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  INSTALLATION.md  MANIFEST.in  README.md  README.rst  RELEASING.md  appveyor.yml  azure-pipelines.yml  conda_environment.yml  conda_environment_dev.yml  pyproject.toml  releasing_guide.md  releasing_guide.rst  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  codeql.yml  doc.yml  package_and_test.yml  release.yml  tests.yml
doc/: citing.rst  conf.py  index.rst  license.rst
doc/_static/: custom.css
doc/_static/css/: custom.css  dark.css  light.css
doc/examples/: example1.rst  examples_index.rst
doc/source/: api.rst  changelog.rst  citing.rst  conf.py  contributing.rst  index.rst  license.rst
doc/source/user_guide/: bibliography.rst  fitting_luminescence.rst  installation.rst  introduction.rst  metadata_structure.rst  signal_axis.rst  signal_tools.rst  utilities.rst
doc/user_guide/: fitting_luminescence.rst  installation.rst  introduction.rst  metadata_structure.rst  signal_axis.rst  signal_tools.rst  streak_images.rst  utilities.rst
docs/source/: index.rst  usage.rst
examples/: README.rst  indexing.py
examples/data_cleaning/: README.rst  data_smoothing.py  remove_background.py  remove_pixels.py  remove_spikes.py
examples/data_handling/: README.rst  energy_conversion.py  map_function.py  peak_analysis.py  region_of_interest.py
examples/data_processing/: README.rst  data_smoothing.py  energy_conversion.py  map_function.py  rebinning.py  remove_background.py  remove_pixels.py  remove_spikes.py
examples/data_selection/: README.rst  extraction_of_linescan.py  indexing.py  region_of_interest.py
examples/example1/: README.rst  example1.py
examples/model_fitting/: README.rst  advanced_model_fitting.py  basic_model_fitting.py  custom_components.py
examples/peak_finding/: README.rst  centroid.py  peak_identification.py  peak_width.py
examples/plotting/: README.rst  chromatic_imaging.py  extraction_of_linescan.py
hyperspy_cl/: .travis.yml  __init__.py  hyperspy_extension.yaml  release_info.py
hyperspy_cl/signals/: __init__.py  cl.py  cl_sem.py  cl_stem.py
hyperspy_cl/tests/: test_cl.py
hyperspy_cl/utils/: __init__.py  acquisition_systems.py  io_utils.py
lumispy/: .travis.yml  __init__.py  __init__.pyi  _version.py  hyperspy_extension.yaml  io.py  release_info.py
lumispy.egg-info/: .gitignore
lumispy/components/: __init__.py  __init__.pyi  convolved_gaussian_exponential.py  decay_gaussian_exponential.py
lumispy/data/: __init__.py  asymmetric_peak_map.hspy  nanoparticles.hspy
lumispy/gui/: lumispy_gui_ipywidgets.py  lumispy_gui_traitsui.py
lumispy/io_plugins/: README  __init__.py  attolight.py
lumispy/signal_tools/: _selector.py
lumispy/signals/: __init__.py  __init__.pyi  cl.py  cl_sem.py  cl_sem_spectrum.py  cl_spectrum.py  cl_stem.py  cl_stem_spectrum.py  cl_streak.py  cl_transient.py  cl_transientspec.py  common_luminescence.py  common_transient.py  el_spectrum.py  lazy_cl_spectrum.py  lazy_el_spectrum.py  lazy_luminescence_spectrum.py  lazy_luminescence_transient.py  lazy_luminescence_transientspec.py  lazy_pl_spectrum.py  luminescence_spectrum.py  luminescence_transient.py  luminescence_transientspec.py  pl_spectrum.py  pl_streak.py  pl_transient.py  pl_transientspec.py
lumispy/tests/: __init__.py  test_axis-conversion.py  test_cl.py  test_cl_sem_spectrum.py  test_cl_spectrum.py  test_common_luminescence.py  test_luminescence_spectrum.py  test_signal_registration.py  test_utils.py
lumispy/tests/components/: test_convolved_gaussian_exponential.py
lumispy/tests/data/: test_data.py
lumispy/tests/signals/: __init__.py  test_cl_sem_spectrum.py  test_cl_spectrum.py  test_common_luminescence.py  test_luminescence_spectrum.py  test_luminescence_transient_spectrum.py
lumispy/tests/utils/: test_axes.py  test_axis-conversion.py  test_axis_conversion.py  test_io.py  test_joinspectra.py  test_plot_span_map.py  test_signals.py  test_utils.py
lumispy/utils/: __init__.py  __init__.pyi  acquisition_systems.py  analysis.py  axes.py  io.py  io_utils.py  plot.py  signals.py
lumispy_demos/: AttolightSEM_HYP.ipynb  GatanSEM_dm.ipynb
lumispy_demos/DemoSample_192EF1E8-2AD5-4956-A718-BDAE8E3FAA0C/: MicroscopeStatus.txt
lumispy_demos/DemoSample_fromAttoLightSEM/: MicroscopeStatus.txt  SE-1024-2020-01-21--12h16.DESC  SE_Scan_16Bits_64_64.raw  SE_Scan_64_64.sur
lumispy_demos/GatanFiles/: Test-linescan_InGaAs-NWs.dm4  Test-spectrum_ZnO-NWs.dm4
upcoming_changes/: 177.enhancements.rst  205.enhancements.rst  205.new.rst  211.doc.rst  211.maintenance.rst  223.new.rst  225.maintenance.rst  247.maintenance.rst  248.doc.rst  250.new.rst  252.new.rst  253.new.rst  255.new.rst  256.maintenance.rst  257.maintenance.rst  README.rst
